tests/snapshots/examples_fixtures/type_system__failing__55_strict_any_return_rejected.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/55_strict_any_return_rejected.flx
== compile ==
failed (compile)
== diagnostics ==
error[E423]: Unknown Type

I can't find a type named `Any`.

  examples/type_system/failing/55_strict_any_return_rejected.flx:1:25
  |
1 | public fn id(x: Int) -> Any {
  |                         ^^^
  |                         --- unknown type used here

Hint:
  Use a built-in type, an in-scope type parameter, or a declared ADT.


error[E300]: Return Type Mismatch

The body of `id` does not match its declared return type.

  examples/type_system/failing/55_strict_any_return_rejected.flx:2:5
  |
1 | public fn id(x: Int) -> Any {
  |                         --- `id` was declared to return `Any`
2 |     x
  |     ^
  |     - this expression has type `Int`

Note:
  declared return type: Any
  body type: Int

Help:
  Return a `Any` value from `id` or change its annotation.

Found 2 errors.
== stdout ==
<not executed>
